README details changed

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is my first push
+This application is used to genereate the XML TestCase suite for DevSquare. Now the tool is now in very beta stage.
